[package]
name = "ssh-agent-lib"
description = "A collection of types for writing custom SSH agents"
version = "0.4.0"
license = "MIT OR Apache-2.0"
authors = [
    "Wiktor Kwapisiewicz <wiktor@metacode.biz>",
    "Arthur Gautier <arthur.gautier@arista.com>",
    "James Spencer <github@jcspencer.net>"
]
repository = "https://github.com/wiktor-k/ssh-agent-lib"
edition = "2021"
rust-version = "1.75"
keywords = ["ssh", "agent", "authentication", "openssh", "async"]
categories = ["authentication", "cryptography", "encoding", "network-programming", "parsing"]
exclude = [".github"]

[workspace]
members = ["."]

[dependencies]
byteorder = "1"
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }
tokio = { version = "1", optional = true, features = ["rt", "net", "time"] }
tokio-util = { version = "0.7", optional = true, features = ["codec"] }
service-binding = { version = "^3" }
ssh-encoding = { version = "0.3.0-pre.0", features = ["alloc"] }
ssh-key = { version = "0.7.0-pre.0", features = ["crypto", "alloc", "rsa"] }
thiserror = "1"
subtle = { version = "2", default-features = false }
signature = { version = "2.3.0-pre.4", features = ["alloc"] }
secrecy = "0.8"

[features]
default = ["agent"]
codec = ["tokio-util"]
agent = ["futures", "log", "tokio", "async-trait", "codec"]

[dev-dependencies]
env_logger = "0.11.3"
rand = "0.8.5"
rsa = { version = "0.10.0-pre.2", features = ["sha2", "sha1"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
sha1 = { version = "0.11.0-pre.4", default-features = false, features = ["oid"] }
testresult = "0.4.0"
hex-literal = "0.4.1"
ssh-key = { version = "0.7.0-pre.0", features = ["p256", "rsa"] }
p256 = { version = "0.14.0-pre.1" }
const-str = "0.5.7"
rstest = "0.21.0"
openpgp-card = "0.5.0"
card-backend-pcsc = "0.5.0"
clap = { version = "4.5.7", features = ["derive"] }
secrecy = "0.8.0"
retainer = "0.3.0"
chrono = "0.4.38"
interprocess = "2.2.0"

[patch.crates-io]
# https://github.com/RustCrypto/SSH/pull/251
ssh-key = { git = "https://github.com/RustCrypto/SSH.git" }
# needs a patch of ssh-encoding otherwise the ssh-key patch will pull its own
# and we will have two Encode/Decode traits.
ssh-encoding = { git = "https://github.com/RustCrypto/SSH.git" }

# https://github.com/dalek-cryptography/curve25519-dalek/pull/676
curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek.git", branch = "rustcrypto-new-releases" }
ed25519-dalek    = { git = "https://github.com/dalek-cryptography/curve25519-dalek.git", branch = "rustcrypto-new-releases" }
