[package]
name = "ssh-agent-lib-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
ssh-encoding = "0.2.0"

[dependencies.ssh-agent-lib]
path = ".."

[[bin]]
name = "request_decode"
path = "fuzz_targets/request_decode.rs"
test = false
doc = false
bench = false
